@@ -1,10 +1,8 @@
 package com.itbaizhan;
 
-import com.sun.xml.internal.messaging.saaj.util.Base64;
-import sun.misc.BASE64Encoder;
-
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 /**
  * MD5消息摘要算法
@@ -13,7 +11,7 @@ public class MD5demo {
     public static void main(String[] args) throws NoSuchAlgorithmException {
 
         // 1. 原文
-        String input = "itbaizhan";//xDCo+ksHiej/JY6FqeBZcg==
+        String input = "itbaizhan";// xDCo+ksHiej/JY6FqeBZcg==
 
         // 2. 算法
         String algorithm = "MD5";
@@ -25,9 +23,8 @@ public class MD5demo {
         byte[] digest = instance.digest(input.getBytes());
 
         // 5. base64编码
-        BASE64Encoder encoder = new BASE64Encoder();
-        System.out.println(encoder.encode(digest));
-
+        Base64.Encoder encoder = Base64.getEncoder();
+        System.out.println(encoder.encodeToString(digest));
 
     }
 }
